--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>桔子桑</title>
-    <link href="/static/css/main.179e187d.chunk.css" rel="stylesheet" />
+    <link href="./static/css/main.179e187d.chunk.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -253,7 +253,7 @@
         r();
       })([]);
     </script>
-    <script src="/static/js/4.5d26f763.chunk.js"></script>
-    <script src="/static/js/main.2e9e4176.chunk.js"></script>
+    <script src="./static/js/4.5d26f763.chunk.js"></script>
+    <script src="./static/js/main.2e9e4176.chunk.js"></script>
   </body>
 </html>
