--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="shader react 桔子桑 babylon.js web3d webgl 博客园 three.js WebGPU"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link rel="manifest" href="./manifest.json" />
     <title>桔子桑</title>
     <link href="./static/css/main.179e187d.chunk.css" rel="stylesheet" />
   </head>
