--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 (o[e] = new Promise(function (t, r) {
                   for (
                     var n =
-                        "static/css/" +
+                        "./static/css/" +
                         ({}[e] || e) +
                         "." +
                         {
@@ -146,7 +146,7 @@
                 (i.src = (function (e) {
                   return (
                     c.p +
-                    "static/js/" +
+                    "./static/js/" +
                     ({}[e] || e) +
                     "." +
                     {
