--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 (o[e] = new Promise(function (t, r) {
                   for (
                     var n =
-                        "https://ecojust.github.io/shaderExample/static/css/" +
+                        "/shaderExample/static/css/" +
                         ({}[e] || e) +
                         "." +
                         {
